native/include/luaujava.h

// Status of the last luaW_* call on this thread; LUA_OK (0) if it did not raise.
LUA_API int luaW_getstatus(lua_State* L);
//
// BEGIN LUA WRAPPERS
//

LUA_API lua_State* luaW_newstate(lua_Alloc f /* nullable */);
// lua_close is not wrapped
LUA_API lua_State* luaW_newthread(lua_State* L);
// lua_mainthread is not wrapped
LUA_API void luaW_resetthread(lua_State* L);
LUA_API void* luaW_newuserdatadtor(lua_State* L, size_t sz, void (*dtor)(void*));