src/generated/java/net/hollowcube/luau/internal/vm/luawrap_h.java

// Generated by jextract

package net.hollowcube.luau.internal.vm;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class luawrap_h {

    luawrap_h() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();
    static final boolean TRACE_DOWNCALLS = Boolean.getBoolean("jextract.trace.downcalls");

    static void traceDowncall(String name, Object... args) {
         String traceArgs = Arrays.stream(args)
                       .map(Object::toString)
                       .collect(Collectors.joining(", "));
         System.out.printf("%s(%s)\n", name, traceArgs);
    }

    static MemorySegment findOrThrow(String symbol) {
        return SYMBOL_LOOKUP.find(symbol)
            .orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol: " + symbol));
    }

    static MethodHandle upcallHandle(Class<?> fi, String name, FunctionDescriptor fdesc) {
        try {
            return MethodHandles.lookup().findVirtual(fi, name, fdesc.toMethodType());
        } catch (ReflectiveOperationException ex) {
            throw new AssertionError(ex);
        }
    }

    static MemoryLayout align(MemoryLayout layout, long align) {
        return switch (layout) {
            case PaddingLayout p -> p;
            case ValueLayout v -> v.withByteAlignment(align);
            case GroupLayout g -> {
                MemoryLayout[] alignedMembers = g.memberLayouts().stream()
                        .map(m -> align(m, align)).toArray(MemoryLayout[]::new);
                yield g instanceof StructLayout ?
                        MemoryLayout.structLayout(alignedMembers) : MemoryLayout.unionLayout(alignedMembers);
            }
            case SequenceLayout s -> MemoryLayout.sequenceLayout(s.elementCount(), align(s.elementLayout(), align));
        };
    }

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    public static final ValueLayout.OfBoolean C_BOOL = ValueLayout.JAVA_BOOLEAN;
    public static final ValueLayout.OfByte C_CHAR = ValueLayout.JAVA_BYTE;
    public static final ValueLayout.OfShort C_SHORT = ValueLayout.JAVA_SHORT;
    public static final ValueLayout.OfInt C_INT = ValueLayout.JAVA_INT;
    public static final ValueLayout.OfLong C_LONG_LONG = ValueLayout.JAVA_LONG;
    public static final ValueLayout.OfFloat C_FLOAT = ValueLayout.JAVA_FLOAT;
    public static final ValueLayout.OfDouble C_DOUBLE = ValueLayout.JAVA_DOUBLE;
    public static final AddressLayout C_POINTER = ValueLayout.ADDRESS
            .withTargetLayout(MemoryLayout.sequenceLayout(java.lang.Long.MAX_VALUE, JAVA_BYTE));
    public static final ValueLayout.OfLong C_LONG = ValueLayout.JAVA_LONG;

    private static class lua_xmove {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("lua_xmove");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void lua_xmove(lua_State *from, lua_State *to, int n)
     * }
     */
    public static FunctionDescriptor lua_xmove$descriptor() {
        return lua_xmove.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void lua_xmove(lua_State *from, lua_State *to, int n)
     * }
     */
    public static MethodHandle lua_xmove$handle() {
        return lua_xmove.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void lua_xmove(lua_State *from, lua_State *to, int n)
     * }
     */
    public static MemorySegment lua_xmove$address() {
        return lua_xmove.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void lua_xmove(lua_State *from, lua_State *to, int n)
     * }
     */
    public static void lua_xmove(MemorySegment from, MemorySegment to, int n) {
        var mh$ = lua_xmove.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("lua_xmove", from, to, n);
            }
            mh$.invokeExact(from, to, n);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class lua_xpush {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("lua_xpush");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void lua_xpush(lua_State *from, lua_State *to, int idx)
     * }
     */
    public static FunctionDescriptor lua_xpush$descriptor() {
        return lua_xpush.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void lua_xpush(lua_State *from, lua_State *to, int idx)
     * }
     */
    public static MethodHandle lua_xpush$handle() {
        return lua_xpush.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void lua_xpush(lua_State *from, lua_State *to, int idx)
     * }
     */
    public static MemorySegment lua_xpush$address() {
        return lua_xpush.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void lua_xpush(lua_State *from, lua_State *to, int idx)
     * }
     */
    public static void lua_xpush(MemorySegment from, MemorySegment to, int idx) {
        var mh$ = lua_xpush.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("lua_xpush", from, to, idx);
            }
            mh$.invokeExact(from, to, idx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_getstatus {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_getstatus");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaW_getstatus(lua_State *L)
     * }
     */
    public static FunctionDescriptor luaW_getstatus$descriptor() {
        return luaW_getstatus.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaW_getstatus(lua_State *L)
     * }
     */
    public static MethodHandle luaW_getstatus$handle() {
        return luaW_getstatus.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaW_getstatus(lua_State *L)
     * }
     */
    public static MemorySegment luaW_getstatus$address() {
        return luaW_getstatus.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int luaW_getstatus(lua_State *L)
     * }
     */
    public static int luaW_getstatus(MemorySegment L) {
        var mh$ = luaW_getstatus.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_getstatus", L);
            }
            return (int)mh$.invokeExact(L);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_newstate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_newstate");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern lua_State *luaW_newstate(lua_Alloc f)
     * }
     */
    public static FunctionDescriptor luaW_newstate$descriptor() {
        return luaW_newstate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern lua_State *luaW_newstate(lua_Alloc f)
     * }
     */
    public static MethodHandle luaW_newstate$handle() {
        return luaW_newstate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern lua_State *luaW_newstate(lua_Alloc f)
     * }
     */
    public static MemorySegment luaW_newstate$address() {
        return luaW_newstate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern lua_State *luaW_newstate(lua_Alloc f)
     * }
     */
    public static MemorySegment luaW_newstate(MemorySegment f) {
        var mh$ = luaW_newstate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_newstate", f);
            }
            return (MemorySegment)mh$.invokeExact(f);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_newthread {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_newthread");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern lua_State *luaW_newthread(lua_State *L)
     * }
     */
    public static FunctionDescriptor luaW_newthread$descriptor() {
        return luaW_newthread.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern lua_State *luaW_newthread(lua_State *L)
     * }
     */
    public static MethodHandle luaW_newthread$handle() {
        return luaW_newthread.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern lua_State *luaW_newthread(lua_State *L)
     * }
     */
    public static MemorySegment luaW_newthread$address() {
        return luaW_newthread.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern lua_State *luaW_newthread(lua_State *L)
     * }
     */
    public static MemorySegment luaW_newthread(MemorySegment L) {
        var mh$ = luaW_newthread.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_newthread", L);
            }
            return (MemorySegment)mh$.invokeExact(L);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_resetthread {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_resetthread");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_resetthread(lua_State *L)
     * }
     */
    public static FunctionDescriptor luaW_resetthread$descriptor() {
        return luaW_resetthread.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_resetthread(lua_State *L)
     * }
     */
    public static MethodHandle luaW_resetthread$handle() {
        return luaW_resetthread.HANDLE;
    }
